Closed Bug 1751718 Opened 3 years ago Closed 3 years ago

WebGPU device request is not rejected when off limits

Categories

(Core :: Graphics: WebGPU, defect)

defect

Tracking

()

RESOLVED FIXED
98 Branch
Tracking Status
firefox98 --- fixed

People

(Reporter: kvark, Assigned: kvark)

References

Details

Attachments

(1 file)

Attachment #9260448 - Attachment description: Bug 1751718 - Reject WebGPU device promise on wrong features and limits → WIP: Bug 1751718 - Reject WebGPU device promise on wrong features and limits
Attachment #9260448 - Attachment description: WIP: Bug 1751718 - Reject WebGPU device promise on wrong features and limits → Bug 1751718 - Reject WebGPU device promise on wrong features and limits
Pushed by dmalyshau@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ab29d2db8263
Reject WebGPU device promise on wrong features and limits r=jimb
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 98 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: