Bug 1751718 - Reject WebGPU device promise on wrong features and limits r=jimb

Differential Revision: https://phabricator.services.mozilla.com/D136770